<resources>
    <string name="app_name">mad_npracticals</string>
    <string name="user_name">Srushti Gosai </string>
    <string name="user_name2">Name : Srushti Gosai</string>
    <string name="er_no">Er no : 190130107038 </string>


    <string name="settings_text_select_theme">Select Theme:</string>
    <string name="settings_text_credentials">Credentials</string>
    <string name="settings_text_username_hint">username</string>
    <string name="settings_text_password_hint">password</string>
    <string name="settings_text_sync_automatically">Sync automatically</string>
    <string name="settings_text_location">Location</string>
    <string name="settings_text_state_on">On</string>
    <string name="settings_text_state_off">Off</string>
    <string name="settings_text_clear_data">Clear Data</string>

    <string-array name="theme_array">
        <item>Material-Light</item>
        <item>YOUR-CUSTOM-THEME-NAME</item>
    </string-array>
</resources>