<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Practical_17.practical_17">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/animationimage" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <!--To start the blink animation of the image-->
        <Button
            android:id="@+id/BTNblink"
            style="@style/TextAppearance.AppCompat.Widget.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="blink"
            android:textColor="@color/white" />

        <!--To start the rotate animation of the image-->
        <Button
            android:id="@+id/BTNrotate"
            style="@style/TextAppearance.AppCompat.Widget.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="clockwise"
            android:textColor="@color/white" />

        <!--To start the fading animation of the image-->
        <!--  <Button
             android:id="@+id/BTNfade"
             style="@style/TextAppearance.AppCompat.Widget.Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:padding="3dp"
             android:text="fade"
             android:textColor="@color/white" /> -->

     </LinearLayout>
     <LinearLayout
         android:id="@+id/linear2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/linear1"
         android:layout_marginTop="30dp"
         android:orientation="horizontal"
         android:weightSum="3">

         <!--To start the move animation of the image-->
        <Button
            android:id="@+id/BTNmove"
            style="@style/TextAppearance.AppCompat.Widget.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="move"
            android:textColor="@color/white" />

        <!--To start the slide animation of the image-->
        <Button
            android:id="@+id/BTNslide"
            style="@style/TextAppearance.AppCompat.Widget.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="slide"
            android:textColor="@color/white" />

        <!--To start the zoom animation of the image-->
    <!--  <Button
        android:id="@+id/BTNzoom"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:padding="3dp"
        android:text="zoom"
        android:textColor="@color/white" />-->

</LinearLayout>

<!--To stop the animation of the image-->
    <Button
        android:id="@+id/BTNstop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear2"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:text="stop_animation" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BTNstop"
        android:layout_marginStart="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="46dp"
        android:text="@string/user_name2"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tverno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:layout_marginStart="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="46dp"
        android:text="@string/er_no"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvaim15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tverno"
        android:layout_marginStart="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="46dp"
        android:text="Aim 17:  Display the use of animations"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="normal" />

</RelativeLayout>